# cyclonedds

./: .gitignore  CMakeLists.txt
.azure/templates/: build-test.yml
.github/workflows/: cycloneDDS-testing.yml  linux.yml  macos.yml  windows.yml
cmake/Modules/: Generate.cmake
examples/: CMakeLists.txt
examples/dynsub/: CMakeLists.txt  compare_samples.c  dynsub.h  dyntypelib.c  dyntypelib.h  print_sample.c  scan_sample.c  size_and_align.c  xmltype.c
fuzz/: CMakeLists.txt  local.sh
fuzz/fuzz_handshake/: CMakeLists.txt  patch_abseil_randen_copts.cmake  patch_lpm.py
fuzz/fuzz_sample_deser/: fuzz_sample_deser.c
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/cdr/: CMakeLists.txt
src/core/cdr/include/dds/cdr/: dds_cdrstream.h
src/core/cdr/src/: dds_cdrstream.c  dds_cdrstream_keys.part.h  dds_cdrstream_write.part.h
src/core/ddsc/include/dds/ddsc/: dds_public_alloc.h
src/core/ddsc/src/: dds__serdata_default.h  dds_alloc.c  dds_dynamic_type.c  dds_instance.c  dds_reader.c  dds_serdata_default.c  dds_sertype_default.c  dds_topic.c  dds_write.c
src/core/ddsc/tests/: CMakeLists.txt  CdrStreamChecking.idl  CdrStreamSignedUnion.idl  TypeBuilderTypes.idl  cdrstream.c  psmx.c  qos_provider.c  reader.c  serdata_keys.c  time_based_filter.c  typebuilder.c
src/core/ddsi/: CMakeLists.txt
src/core/ddsi/include/dds/ddsi/: ddsi_entity_index.h  ddsi_sertype.h
src/core/ddsi/src/: ddsi__dynamic_type.h  ddsi__plist_generic.h  ddsi__radmin.h  ddsi__serdata_cdr.h  ddsi__serdata_plist.h  ddsi__serdata_pserop.h  ddsi__xmsg.h  ddsi_discovery.c  ddsi_dynamic_type.c  ddsi_endpoint.c  ddsi_participant.c  ddsi_plist.c  ddsi_pmd.c  ddsi_proxy_endpoint.c  ddsi_receive.c  ddsi_security_exchange.c  ddsi_serdata.c  ddsi_serdata_cdr.c  ddsi_transmit.c  ddsi_typebuilder.c  ddsi_typelookup.c  ddsi_typewrap.c  ddsi_vnet.c
src/core/ddsi/tests/: receive_packet.c
src/core/xtests/cdrtest/: CMakeLists.txt
src/core/xtests/rhc_torture/: rhc_torture.c
src/core/xtests/symbol_export/: CMakeLists.txt  dds_library_loader.h.in  symbol_export.c
src/idl/: CMakeLists.txt
src/idl/src/: expression.c  tree.c
src/idl/tests/: functions.c
src/psmx_iox/: CMakeLists.txt
src/psmx_iox/src/: psmx_iox2_impl.c
src/security/builtin_plugins/tests/: CMakeLists.txt
src/security/core/src/: dds_security_serialize.c
src/security/core/tests/: CMakeLists.txt
src/security/openssl/: CMakeLists.txt
src/tools/_confgen/: CMakeLists.txt
src/tools/idlc/src/libidlc/: libidlc__descriptor.c
src/tools/idlc/tests/: type_meta.c
src/tools/idlc/xtests/: CMakeLists.txt
